add verification of cache

--- a/cache-instance/src/main/resources/application.properties
+++ b/cache-instance/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.redis.host=${REDIS_HOST}
 spring.redis.port=${REDIS_PORT}
 processes=${PROCESSES}
 server.port=5000
+stream.key=from-to-events
+publish.rate=10000
 
