allow multiple redis-consumers to be able to stay in sync, trim the stream

--- a/cache-instance/src/main/resources/application.properties
+++ b/cache-instance/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.redis.password=${REDIS_PASSWORD}
 spring.redis.host=${REDIS_HOST}
 spring.redis.port=${REDIS_PORT}
 processes=${PROCESSES}
-server.port=5000
+server.port=${SERVER_PORT}
 stream.key=from-to-events
 publish.rate=10000
 
